[metadata]
name = ngram
version = 0.0.1
description = A simple package to create n-gram models from text corpora
long_description = file: README.md, LICENSE
keywords = ngrams, language, computational, linguistics
license = GNU GPL 3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    nltk
    pandas
