[metadata]
name = ngram
version = 0.1.0
description = A simple package to create n-gram models from text corpora
long_description = file: README.md, LICENSE
keywords = ngram, language, computational, linguistics
author = Steven Bal
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    nltk
